change shirt png

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </button>
 
                 <a class="navbar-brand" href="#page-top">
-                    <i class="fa fa-star"></i>
+                    <!-- <i class="fa fa-star"></i> -->
                     ONE COLOR TEES
                 </a>
             </div>
@@ -78,12 +78,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/starshirt.png" alt="">
+                    <img class="img-responsive" src="img/onecolortees.png" alt="">
                     <div class="intro-text shadow-text">
-                        <span class="name">One Color Tees</span>
+                        <!-- <span class="name">One Color Tees</span>
                         <span class="michaelii"><img src="img/amichaeliicompany.png" /></span>
                         <hr class="star-light">
-                        <span class="skills">The Possibilities are Endless</span>
+                        <span class="skills">The Possibilities are Endless</span>-->
                     </div>
                 </div>
             </div>
@@ -95,46 +95,46 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Easy As 1-2-3</h2>
+                    <h2>We Make the Process Simple</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
+                        <!-- <div class="caption">
                             <div class="caption-content">
-                                1 - Design
+                                Design
                             </div>
-                        </div>
+                        </div> -->
                         <img src="img/star.png" class="img-responsive" alt="Send a Design">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
+                        <!-- <div class="caption">
                             <div class="caption-content">
-                                 2 - Apparel
+                                 Apparel
                             </div>
-                        </div>
+                        </div> -->
                         <img src="img/shirt.png" class="img-responsive" alt="Choose Apparel">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
+                        <!-- <div class="caption">
                             <div class="caption-content">
-                                 3 - WOW!
+                                 WOW!
                             </div>
-                        </div>
+                        </div> -->
                         <img src="img/starshirt.png" class="img-responsive" alt="Finished Product">
                     </a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <!-- <div class="col-lg-12 text-center">
                     <p><small> * </small>Send us your design, desired apparel, and quantities for a no obligation quote. Printing will not start until designs and quotes are approved.</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -300,13 +300,13 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>99 North 1330 West<br>Orem, UT 84057</p>
+                        <p>123 W Parkside Drive<br>Saratoga Springs, UT 84045</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://facebook.com/onecolortees" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
