--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <!--<meta charset="utf-8">-->
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <!--<meta name="description" content="">-->
+    <!--<meta name="author" content="">-->
 
     <title>One Color Tees</title>
 
@@ -27,7 +27,7 @@
     <!--[if lt IE 9]>
     <!--    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>-->
     <!--    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>-->
-    <!--<![endif]-->-->
+    <!--<![endif]-->
      <script src="http://platform.fatsecret.com/js?key=6b08f69400934e4f998fb2d8e88a6fee"></script>
 </head>
 <body>
@@ -59,7 +59,7 @@
 <!--                    </li>-->
                     <!-- <li class="page-scroll">
 <!--                        <a href="#portfolio">Pricing</a>-->
-<!--                    </li> -->-->
+<!--                    </li> -->
 <!--                    <li class="page-scroll">-->
 <!--                        <a href="#about">About</a>-->
 <!--                    </li>-->
@@ -83,7 +83,7 @@
                         <!-- <span class="name">One Color Tees</span>
 <!--                        <span class="michaelii"><img src="img/amichaeliicompany.png" /></span>-->
 <!--                        <hr class="star-light">-->
-<!--                        <span class="skills">The Possibilities are Endless</span>-->-->
+<!--                        <span class="skills">The Possibilities are Endless</span>-->
 <!--                    </div>-->
 <!--                </div>-->
 <!--            </div>-->
@@ -106,7 +106,7 @@
 <!--                            <div class="caption-content">-->
 <!--                                Design-->
 <!--                            </div>-->
-<!--                        </div> -->-->
+<!--                        </div> -->
 <!--                        <img src="img/star.png" class="img-responsive" alt="Send a Design">-->
 <!--                    </a>-->
 <!--                </div>-->
@@ -116,7 +116,7 @@
 <!--                            <div class="caption-content">-->
 <!--                                 Apparel-->
 <!--                            </div>-->
-<!--                        </div> -->-->
+<!--                        </div> -->
 <!--                        <img src="img/shirt.png" class="img-responsive" alt="Choose Apparel">-->
 <!--                    </a>-->
 <!--                </div>-->
@@ -126,7 +126,7 @@
 <!--                            <div class="caption-content">-->
 <!--                                 WOW!-->
 <!--                            </div>-->
-<!--                        </div> -->-->
+<!--                        </div> -->
 <!--                        <img src="img/starshirt.png" class="img-responsive" alt="Finished Product">-->
 <!--                    </a>-->
 <!--                </div>-->
@@ -134,7 +134,7 @@
 <!--            <div class="row">-->
                 <!-- <div class="col-lg-12 text-center">
 <!--                    <p><small> * </small>Send us your design, desired apparel, and quantities for a no obligation quote. Printing will not start until designs and quotes are approved.</p>-->
-<!--                </div> -->-->
+<!--                </div> -->
 <!--            </div>-->
 <!--        </div>-->
 <!--    </section>-->
@@ -316,10 +316,10 @@
 <!--                            </li>-->
                            <!--  <li>
 <!--                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>-->
-<!--                            </li> -->-->
+<!--                            </li> -->
                             <!-- <li>
 <!--                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>-->
-<!--                            </li> -->-->
+<!--                            </li> -->
 <!--                        </ul>-->
 <!--                    </div>-->
 <!--                    <div class="footer-col col-md-4">-->
