--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>-->
     <!--    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>-->
     <!--<![endif]-->
-     <script src="http://platform.fatsecret.com/js?key=6b08f69400934e4f998fb2d8e88a6fee"></script>
+     <script src="http://platform.fatsecret.com/js/?key=6b08f69400934e4f998fb2d8e88a6fee"></script>
 </head>
 <body>
 <!--<body id="page-top" class="index">-->
